remove whitespace in sidebar on small screen sizes, fix #179

--- a/resources/styles/tweeki/_overwrites.scss
+++ b/resources/styles/tweeki/_overwrites.scss
@@ -807,8 +807,13 @@ label > input[type=radio] {
 .sidebar-sticky {
   position: sticky;
   top: 80px;
-  height: calc(100vh - 300px);
   z-index: 1;
+}
+
+@include media-breakpoint-up(md) {
+  .sidebar-sticky {
+    height: calc(100vh - 300px);
+  }
 }
 
 /**
